packages/ui-library/src/css/buttons.scss
@mixin base-button-styles {
    @include text-style($color-slate, $font-size-primary);

    position: relative;
    display: inline-block;
    background-color: $color-white;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    outline: none;
    white-space: nowrap;

    &:hover {
        text-decoration: none;
    }
}

@mixin default-button-styles {
    background: $color-white;

    &:hover {
        color: $color-slate;
    }
}

input[type=button],
input[type=submit],
button,
.button {
    $height: 36px;

    padding: 0 25px;
    margin-right: 10px;
    height: $height;
    line-height: $height;
    border: 1px solid $color-rhino;
    box-sizing: border-box;

    @include border-radius(2px);
    @include base-button-styles;
    @include default-button-styles;

    &:hover {
        color: $color-active;
        border-color: $color-active;
        &.inline .badge {
            border-color: $color-active;
        }
    }
    &:focus {
        border: 1px solid $color-rhino;
    }


    &.primary,
    &.success,
    &.cancel,
    &.danger {
        color: $color-white;
        border: none;
        background: none;

        &:hover {
            color: $color-white;
        }
    }
    &.primary {
        background-color: $color-active-blue;

        &:hover {
            background-color: $color-active-blue-highlighted;
        }
    }
    &.success {
        background-color: $color-success;

        &:hover {
            background-color: $color-success-highlighted;
        }
    }
    &.cancel {
        background-color: $color-stratus;

        &:hover {
            background-color: tint($color-stratus, 10%);
        }
    }
    &.danger {
        background-color: $color-critical-red;

        &:hover {
            background-color: $color-critical-red-highlighted;
        }
    }
    &.secondary {
        background-color: $color-white;
        color: $color-slate;
        border: 1px solid $color-rhino;

        &:hover {
            color: $color-active-blue-highlighted;
            border-color: $color-active-blue-highlighted;
        }
    }

    &.inline {
        $height: 26px;

        height: $height;
        line-height: $height;
        font-size: $font-size-normal;

        @include border-radius(ceil($height/2));

        .badge {
            color: inherit;
            border: 1px solid $color-stratus;
            margin-left: 5px;
            padding: 0 5px;
            box-sizing: border-box;
            display: inline-block;
            min-width: 19px;
            height: 19px;
            line-height: 19px;
            text-align: center;

            @include border-radius(10px);
        }
    }
    &.disabled,
    &[disabled] {
        cursor: default;

        @include opacity(0.4);

        &:hover {
            color: $color-slate;
            border-color: $color-rhino;
        }
        &.primary,
        &.success {
            &:hover {
                color: $color-white;
            }
        }
        &.primary {
            &.ellipsis {
                color: $color-active-blue;

                &:hover {
                    color: $color-active-blue;
                }
            }
            &:hover {
                background-color: $color-active-blue;
            }
        }
    }
    &.add {
        padding-left: 36px;
        margin: 0;

        &:before,
        &:after {
            font-family: $icon-font;
        }
        &:before {
            content: '\2b';
            position: absolute;
            left: 20px;
            top: 13px;
            font-size: 10px;
            line-height: 1em;
        }
        &.user {
            padding-right: 15px;
            font-size: 0;

            &:after {
                font-size: 19px;
                content: '\55';
            }
        }
        &.no-label {
            width: 25px;
            padding: 0;

            &:before {
                left: 8px;
            }
        }

        &.inline {
            &:before {
                top: 8px;
            }
        }
    }
    &.download {
        padding-left: 40px;

        &:before {
            font-family: $icon-font;
            content: '\44';
            position: absolute;
            left: 15px;
            top: 0;
            font-size: 15px;
        }

        &.inline {
            padding-left: 35px;

            &:before {
                font-size: 12px;
            }
        }
    }
    &.inline {
        &.edit,
        &.plus,
        &.delete,
        &.remove,
        &.minus,
        &.prev,
        &.next {
            $size: 29px;

            padding: 0;
            height: $size;
            width: $size;
            text-align: center;
            line-height: $size;

            @include border-radius(ceil($size/2));

            &:before {
                position: absolute;
                left: 0;
                top: 0;
                width: 100%;
                font-family: $icon-font;
                text-transform: none;
            }

            // if the icon button has text then adjust the spacing accordingly
            &:not(:empty) {
                width: auto;
                padding: 0 25px 0 43px;

                &:before {
                    width: auto;
                    left: 18px;
                }
            }
        }

        &.plus {
            &:before {
                content: '*';
                font-size: 12px;
            }
        }
        &.remove,
        &.minus {
            &:before {
                content: '-';
                font-size: 9px;
            }
        }
        &.delete {
            &:before {
                content: 'd';
                font-size: 15px;
            }
        }
        &.edit {
            &:before {
                content: 'e';
                font-size: 15px;
            }
        }
        &.prev {
            &:before {
                content: '<';
                font-size: 11px;
            }
        }
        &.next {
            &:before {
                content: '>';
                font-size: 11px;
            }
        }

        &.small {
            $size: 21px;
            height: $size;
            width: $size;
            line-height: $height;
            font-size: 13px;
            margin: 0;
            vertical-align: text-bottom;

            &.edit {
                &:before {
                    top: 5px;
                    font-size: 10px;
                }
            }
            &.plus {
                &:before {
                    top: 7px;
                    font-size: 10px;
                }
            }
            &.remove,
            &.minus {
                &:before {
                    top: 10px;
                    left: 1px;
                    right: 0;
                    font-size: 9px;
                    width: auto;
                    height: 2px;
                    line-height: 2px;
                }
            }
        }
    }
    &.large {
        $height: 52px;
        height: $height;
        line-height: $height;
        font-size: $font-size-primary;
    }
    &.row-button {
        vertical-align: bottom;

        &.inline {
            margin: 0 0 6px;
        }
    }
}


button.ellipsis-loader-button {
    .icon-ellipsis {
        position: absolute;
        top: 15px;
        left: 50%;
        margin: 0 0 0 -18px;
        display: none;
    }
    &.loading {
        color: transparent;
        cursor: default;

        .icon-ellipsis {
            display: block;
        }
        &.primary {
            &:hover {
                background-color: $color-active-blue;
                color: $color-active-blue;
            }
        }
        &.inline {
            .icon-ellipsis {
                top: 9px;
            }
        }
    }
}

.rocker-button {
    $height: 35px;
    $transition: left 0.4s ease-out;

    height: $height;
    line-height: $height;
    margin-bottom: 25px;

    @include border-radius(3px);
    @include base-button-styles;

    label {
        @include text-style();

        position: relative;
        float: left;
        padding: 0 30px;

        width: auto;
        line-height: $height - 2px;

        text-transform: none;
        margin: 0;

        border-style: solid;
        border-color: $color-rhino;
        border-width: 1px 0 1px 1px;

        cursor: pointer;

        &:first-of-type {
            @include border-radius(3px 0 0 3px);
        }
        &:last-of-type {
            @include border-radius(0 3px 3px 0);
            border-width: 1px;
        }
    }
    &.disabled {
        @include opacity(0.4);
        cursor: default;
        label {
            pointer-events: none;
        }
    }
    &.sel-0 label:nth-of-type(1),
    &.sel-1 label:nth-of-type(2),
    &.sel-2 label:nth-of-type(3),
    &.sel-3 label:nth-of-type(4),
    &.sel-4 label:nth-of-type(5) {
        @include transition($transition);
        background: $color-timberwolf;
    }
}

//Consolidates styles for centered group of buttons with optional cancel link
.button-group {
    margin: 25px 0 0;
    text-align: center;
    white-space: nowrap;
    button,
    .button,
    input[type=button] {
        margin: 0 5px;
    }
    a {
        text-transform: none;
        &.secondary {
            color: $color-rhino;
        }
        &.cancel {
            display: inline-block;
            margin-top: 15px;
            font-weight: normal;
        }
    }
}

.tile-button,
button.tile-button {
    border-color: $color-accent-neutral-70;
    color: $color-slate;
    font-size: 15px;
    padding: $spacing-xl $spacing-lg $spacing-lg $spacing-lg;
    line-height: normal;
    height: auto;
    white-space: normal;

    @include flexbox;
    @include flexbox-direction(column);

    align-items: center;
    justify-content: space-between;
    -ms-flex: 1 1 100%;

    &:hover,
    &:active,
    &.tile-button--selected {
        border-color: $color-active-blue;

        .tile-button__icon {
            color: $color-active-blue;
        }
    }
}

.tile-button__icon {
    font-size: 80px;
    color: $color-midnight;
    margin-bottom: $spacing-lg;
}

.tile-button__content {
    @include flexbox-grow(1);
}

.tile-button__title {
    color: $color-active-blue;
    font-size: 17px;
    margin-top: $spacing-lg;
}

.tile-selector {
    @include flexbox;

    > * {
        @include flexbox-grow(1);
        @include flexbox-shrink(1);
        margin-right: $spacing-md;
        flex-basis: 0;

        &:last-child {
            margin-right: 0;
        }
    }
}

